split input with label, split variables, form styles, etc.

--- a/panel.html
+++ b/panel.html
@@ -23,7 +23,7 @@
     <![endif]-->
   </head>
   <body>
-    <form class="search_field search_on_map collapse in" action="" id="search_on_map">
+    <form class="search_field search_on_map form collapse in" action="" id="search_on_map">
         <button class="search_collapse" role="button" data-toggle="collapse" href="#search_on_map" aria-expanded="false" aria-controls="search_on_map">
             &larr; Свернуть
         </button>
