--- a/table.html
+++ b/table.html
@@ -15,6 +15,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/search.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -104,7 +105,7 @@
           </div>
         </fieldset>
         
-        <fieldset class="extended_search_field collapse" id="extended_search">
+        <fieldset class="extended_search_field form collapse in" id="extended_search">
           <div class="row">
             <section class="col-sm-12 col-md-4">
               <h6>Что продается</h6>
@@ -167,10 +168,12 @@
                   Качество почв от/до
                   <input type="text"/>
                 </label>
-                <label class="inline col-xs-6 col-md-6">
-                  <input type="text"/>
-                  Кислотность почв  от/до   
-                </label>
+                <span class="col-xs-6 col-md-6">
+                  <label class="inline">
+                    <input type="text"/>
+                    Кислотность почв  от/до   
+                  </label>
+                </span>
               </div>
             </section>
             <section class="col-xs-12 col-md-4">
