--- a/application.html
+++ b/application.html
@@ -72,7 +72,10 @@
                         <label><input type="checkbox"/> эмфитевзис - продажа оформленного права эмфитевзиса</label>
                         <label><input type="checkbox"/> право постоянного пользования</label>
                         <label><input type="checkbox"/> отвод государственной (коммунальной) земли</label>
-                        <label>другое <textarea maxlength="2000"></textarea></label>
+                        <label class="other">
+                            <input type="checkbox"/> Другое
+                            <textarea maxlength="2000"></textarea>
+                        </label>
                     </li>
                     <li>
                         <h6>Расположение</h6>
