--- a/application.html
+++ b/application.html
@@ -510,6 +510,7 @@
                     <li>
                         <input type="file"/>
                     </li>
+                    <li class="link"><button>Submit</button></li>
                 </ul>
             </fieldset>
         </form>
