--- a/table.html
+++ b/table.html
@@ -105,7 +105,7 @@
           </div>
         </fieldset>
         
-        <fieldset class="extended_search_field form collapse in" id="extended_search">
+        <fieldset class="extended_search_field form collapse" id="extended_search">
           <div class="row">
             <section class="col-sm-12 col-md-4">
               <h6>Что продается</h6>
