functionality of search form. Range slider now work for specify text fields all drop downs filled throw API, pagenator, rows per page is ready. table filled by local jsons +Added hisoty api - History arrows now work for search navigation(back/forward) + User can copy-pase url of page with search result

--- a/table.html
+++ b/table.html
@@ -131,7 +131,7 @@
               </div>
               <section class="range-slider">
                 <span class="rangeValues"></span>
-                <input value="5" min="0" max="15" step="0.5" type="range" id="rangeAreaMin">
+                <input value="5" min="0" max="15" step="0.5" type="range"  id="rangeAreaMin">
                 <input value="10" min="0" max="15" step="0.5" type="range"  id="rangeAreaMax">
               </section>
               <div class="row">
@@ -340,7 +340,7 @@
               <span class="records-found"></span>  объявлений из <span class="records-total"></span>
             </div>
             <div class="col-xs-12 col-md-6 text-right">
-              <a href="#" onclick="$('.searchform')[0].reset(); return false;">очистить результаты</a>
+              <a href="#" onclick="resetForm();return false;">очистить результаты</a>
               <span class="select">
                 показать по
                 <select name="num_per_page" class="num_per_page">
