forms: loading data, validation, submit forms

--- a/table.html
+++ b/table.html
@@ -93,9 +93,9 @@
         <input type="hidden" name="page_num" id="page_num_hf" value="0">
         <fieldset class="simple_search_field">
           <!-- TODO: rename post_ad because AdBlocker hide it-->
-          <a href="#" class="post_ad">Разместить объявление</a>
+          <a href="#" class="post_icon">Разместить объявление</a>
           <a href="#" class="map_link">Показать на карте</a>
-          
+
           <div>
             <label class="search_input">
               <input type="text" name="search" placeholder="Например, земельный участок в Тернопольской области " id="search_txt_field" />
@@ -185,7 +185,7 @@
                 <div class="select-style col-xs-8 col-md-8">
                   <select name="place">
                     <option value="">---- выберите значенние ----</option>
-                    <option>Автономная Республика Крым</option>
+                    <option>АР Крым</option>
                     <option>Винницкая область</option>
                     <option>Волынская область</option>
                     <option>Днепропетровская область</option>
@@ -364,49 +364,11 @@
             </tr>
           </thead>
           <tbody>
-            <!--<tr>
-              <td>29.06.2016</td>
-              <td>SDERWSXC4EdsE</td>
-              <td>Продажа</td>
-              <td>Киевская</td>
-              <td>5 000</td>
-              <td>1 000</td>
-            </tr>
-            <tr>
-              <td>29.06.2016</td>
-              <td>SDERWSXC4EdsE</td>
-              <td>Продажа</td>
-              <td>Киевская</td>
-              <td>5 000</td>
-              <td>1 000</td>
-            </tr>
-            <tr>
-              <td>29.06.2016</td>
-              <td>SDERWSXC4EdsE</td>
-              <td>Продажа</td>
-              <td>Киевская</td>
-              <td>5 000</td>
-              <td>1 000</td>
-            </tr>
-            <tr>
-              <td>29.06.2016</td>
-              <td>SDERWSXC4EdsE</td>
-              <td>Продажа</td>
-              <td>Киевская</td>
-              <td>5 000</td>
-              <td>1 000</td>
-            </tr>-->
+
           </tbody>
         </table>
         <ul class="pagination">
-          <!--<li><span>Первая</span></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">Последняя</a></li>
-          -->
+
         </ul>
         <section class="inner">
           <p>Деятельность, связанная с оформлением земли в Украине, является специфической отраслью, которая требует досконального
